--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@react-navigation/stack": "^5.14.3",
     "@reduxjs/toolkit": "^1.5.0",
     "emotion-theming": "^11.0.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-hook-form": "^6.15.5",
     "react-native": "0.64.0",
+    "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-text-input-mask": "^3.1.4",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "yup": "^0.32.9"
